objects/Apttus__SearchFilter__c.object
<CustomObject>
    <description>Represents a search filter</description>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The business object which provides the context for the filter</description>
        <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the filter criteria</description>
        <inlineHelpText>The list of field names used in the filter criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Criteria__c</fullName>
        <description>The filter criteria specification</description>
        <inlineHelpText>The filter criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Datetime__c</fullName>
        <description>Search datetime</description>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description for the filter</description>
        <inlineHelpText>The description for the filter</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__GroupType__c</fullName>
        <description>The collaboration type</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__PeopleType__c</fullName>
        <description>The people type</description>
        <label>People Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Following</fullName>
                </value>
                <value>
                    <fullName>Followers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__SObjectName__c</fullName>
        <description>The sobject to query</description>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__SearchType__c</fullName>
        <description>The search type</description>
        <label>Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Files</fullName>
                </value>
                <value>
                    <fullName>Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Filter (Comply)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters (Comply)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>